--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,8 @@
   --common-blue: #1d2552;
 }
 .header-full-width {
-  padding: 10px 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
   background: var(--common-blue);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
