--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 @import url("./src/css/footer.css");
 
 :root {
+  /* --common-blue: ##1d2552; */
 }
 /* Reusable classes start */
-.section-full-width {
+.full-width {
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -81,3 +82,17 @@
 .underline {
   text-decoration: underline;
 }
+
+/* Main content css start */
+.main-content-full-width {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url(./src/img/photo-1533460004989-cef01064af7e.avif);
+  background-size: cover;
+}
+/* Main content css end */
