--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,3 @@
-:root {
-  --common-blue: #1d2552;
-}
-
 .footer-full-width {
   background: var(--common-blue);
   padding-top: 10px;
@@ -13,4 +9,10 @@ footer * {
 
 .footer p {
   font-size: 14px;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer p {
+    font-size: 12px;
+  }
 }
