--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@
 .w-100 {
   width: 100%;
 }
+.w-50 {
+  width: 50%;
+}
 .h-100 {
   height: 100%;
 }
@@ -54,6 +57,9 @@
 }
 .justify-between {
   justify-content: space-between;
+}
+.justify-end {
+  justify-content: flex-end;
 }
 .align-self-start {
   align-self: flex-start;
@@ -119,12 +125,80 @@ button:hover {
   padding-top: 10px;
   padding-bottom: 10px;
   position: relative;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
-    ),
-    url(./src/img/photo-1533460004989-cef01064af7e.avif);
-  background-size: cover;
+}
+.main-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+.main-content-img {
+  max-width: 400px;
+}
+.main-content-img img {
+  width: 100%;
+}
+.form-header-content {
+  background-color: var(--common-blue);
+  margin: -10px -10px 10px -10px;
+  border-radius: 10px 10px 0 0;
+  -webkit-border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0;
+  -ms-border-radius: 10px 10px 0 0;
+  -o-border-radius: 10px 10px 0 0;
+}
+.form-header-content h4 {
+  margin: 0;
+  padding: 10px;
+  color: white;
+  text-align: center;
+}
+.main-form-content {
+  width: 100%;
+  max-width: 400px;
+  min-height: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.steps::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 80%;
+  height: 2px;
+  background: #e0e0e0;
+}
+.steps > .step {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step > span {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  display: inline-block;
+  border-radius: 50%;
+  background: #fff;
+  text-align: center;
+  font-size: 16px;
+  color: #0e214b;
+  font-weight: 500;
+  border: 1px solid #ddd;
+  position: relative;
+  z-index: 1;
 }
 /* Main content css end */
 
